Fix alignment of submit button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -435,7 +435,6 @@ footer {
 /* FORM STYLING */
 
 form {
-    /* text-align: center; */
     color: silver;
     font-size: 1.3rem;
     margin: 20px auto 80px auto;
@@ -460,7 +459,7 @@ fieldset {
     text-align: left;
 }
 
-fieldset>* {
+fieldset > * {
     margin-left: 1vw;
     margin-bottom: 0.5rem;
 }
@@ -487,9 +486,9 @@ textarea {
     max-width: 90%;
 }
 
-input,
+.personal-details input,
 textarea {
-    background-color: #00000055;
+    background-color: rgba(148, 79, 15, 0.2);
     font-size: 1.3rem;
     padding: 5px;
     margin: 5px 0;
@@ -503,15 +502,16 @@ textarea {
 }
 
 input[type='submit'] {
+    color: silver;
     font-size: 1.2rem;
     border-radius: 10px;
-    padding: 2px 7px;
-    background-color: silver;
+    padding: 5px 7px;
+    background-color: rgba(148, 79, 15, 0.5);
     border: 1px solid #777777;
 }
 
 input[type='submit']:hover {
-    background-color: white;
+    background-color: rgba(148, 79, 15, 0.8);
 }
 
 .fieldset-holder i {
